# simplyTools

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
src/: main.cpp
src/bilibiliData/: BiliBiliDataTool.cpp  BiliBiliDataTool.h  bilibiliDataWidget.cpp  bilibiliDataWidget.h  setInfoDialog.cpp  setInfoDialog.h
src/customComponents/: FastAppItem.cpp  FastAppItem.h  MButton.cpp  MButton.h  MDialog.cpp  MDialog.h  MIcon.cpp  MIcon.h  MLineEdit.cpp  MLineEdit.h  MNotificationBox.cpp  MNotificationBox.h  MSidebar.cpp  MSidebar.h  MTabSwitchButton.cpp  MTabSwitchButton.h
src/customComponents/res/: MButton.qss  button.qrc  getBiliBiliData.py  sidebar.qss
src/fastApp/: FastAppEditWoker.h  FastAppItem.cpp  FastAppItem.h  FastAppWoker.cpp  FastAppWoker.h  FlowLayoutWidget.cpp  FlowLayoutWidget.h  fastAppWidget.cpp  fastAppWidget.h
src/global/: globalSetting.cpp  globalSetting.h
src/mainWidget/: mainwindow.cpp  mainwindow.h  mtitlebar.cpp  mtitlebar.h
src/simplyScreenShot/: MFullWidget.cpp  MFullWidget.h  simpyScreenShot.cpp  simpyScreenShot.h
src/simplyScreenShot/res/: screen.qrc  screen.qss
src/simplyTranslate/: TranslateTool.cpp  TranslateTool.h  simplyTranslateWidget.cpp  simplyTranslateWidget.h
src/simplyTranslate/res/: translate.qrc  translate.qss
